<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BurdApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<!-- Language variables -->
	<string name="list_of_orders">आर्डर</string>
	<string name="list_of_farmers">किसान</string>
	<string name="farmer_registration">किसान का पंजीकरण</string>
	<string name="add_new_farmers">नया किसान जोड़े</string>
	
	
	<!-- Inside new_farmer_registration.xml -->
	<string name="personal_details">व्यक्तिगत जानकारी</string>
	<string name="full_name">पूरा नाम</string>
	<string name="contact_details">संपर्क विवरण</string>
	<string name="address">पता</string>
	<string name="street_name">गली का पता</string>
	<string name="landmark">किस के नज़दीक?</string>
	<string name="city">शहर</string>
	<string name="state">राज्य</string>
	<string name="pincode">पिन कोड</string>
	<string name="item_and_quantity">दर और मात्रा</string>
	<string name="kernel">चुल्लू बादाम</string>
	<string name="kilo">किलो</string>
	<string name="seed">चुल्लू बीज</string>
	<string name="fruit">चुल्लू फल</string>
	<string name="pulp">चुल्लू पल्प</string>
	<string name="fpulp">पल्प</string>
	<string name="accept">स्वीकार</string>
	<string name="reject">रद</string>
	<string name="rupee_per_kg">₹/कि.</string>
	<string name="rupee">₹</string>
	<!-- confirmation message for choosing yes or no  -->
	<string name="accept_confirmation_msg">क्या आप किसान को जोड़ना चाहते है ?</string>
	<string name="accept_confirmation_for_edit_msg">क्या आप अपनी जानकारी बदलना चाहते है ?</string>
	<string name="reject_confirmation_msg">क्या आप रद करना चाहते है ?</string>
	<string name="reject_confirmation_for_edit_msg">क्या आप पीछे जाना चाहते है ?</string>
	<string name="yes">हाँ</string>
	<string name="no">नहीं</string>
	<string name="mandatory_field">जरुरी है</string>
	<string name="change_it">बदल दें</string>
	<string name="confirm_it">पुष्टि करें</string>
	<string name="no_change">क्या आप कोई बदलाव नहीं करना चाहते ?</string>
	<string name="farmer_added_successfully">किसान जुड़ गया है।</string>
	<string name="farmer_not_added">किसान नहीं जुड़ा है। फिरसे प्रयास करे</string>
	<string name="farmer_updated_successfully">किसान की जानकारी बदल दी गयीं हैं</string>
	<string name="farmer_not_updated">किसान की जानकारी बदली नहीं गयी हैं</string>
	
	<string-array name="tel_array">
        <item>मोबाइल</item>
        <item>लैंडलाइन</item>        
    </string-array>
    
	<!-- ///////////string of farmer_details_page.xml and FarmerDetailsPage.java //////////////-->
	<string name="quantity_left">शेष मात्रा</string>
	<string name="selected_quantity">चुनी हुई मात्रा</string>
	<string name="available_quantities">उपलब्ध मात्रा</string>
	<string name="fkernel">गिरी</string>
	<string name="fseed">बीज</string>
	<string name="ffruit">फल</string>
	<string name="last_transactions">पिछला हिसाब</string>
	<string name="order_id">आर्डर क्रमांक</string>
	<string name="payment">भुगतान</string>
	<string name="mobile">मोबाइल</string>
	<string name="home_address">घर का पता</string>
	
	
	<!-- Order related -->
	<string name="new_order">नया ऑर्डर</string>
	<string name="order_name">ऑर्डर</string>
	<string name="order_quantity">ऑर्डर मात्रा</string>
	<string name="order_price">दर/रेट</string>
	<string name="order_type">चुल्लू</string>
	<string name="order_delivery_date">पहुँच की तरीक</string>
	<string name="order_total">कुल ऑर्डर राशि</string>
	<string name="order_details">ऑर्डर विवरण</string>
	
	<string name="suborderqty">मात्रा</string>
	<string name="suborderprice">दर</string>
	<string name="subordertravel">ढ़ोने का भाड़ा</string>
	<string name="accept_confirmation_for_order_msg">क्या आप इस ऑर्डर को स्वीकार करना चाहते हो?</string>
	<string name="reject_confirmation_for_order_msg">क्या आप इस ऑर्डर को रद्द करना चाहते हो?</string>
	<string name="order_confirmed">आपका ऑर्डर पक्का हो चूका है !!</string>
	<string name="order_already_taken">माफ़ कीजिये!  ऑर्डर किसी और को मिल चुका है !!</string>
	<string name="order_rejected">आपका ऑर्डर रद्द हो चूका है !!</string>
	<string name="select_farmer">किसान चुनें</string>
	<string name="delivery_date">पहुँच की तरीक</string>
	<string name="confirmed_it">पक्का करें</string>
	<string name="received_it">प्राप्त हुआ</string>
	<string name="call">कॉल करें</string>
	<string name="delete">निरस्त करें</string>
	<string name="go_ahead">आगे बढ़ें</string>
	<string name="add_new_farmer">नया किसान जोड़ें</string>
	<string name="farmer_total_price">कुल राशि</string>
	<string name="order_closed">ऑर्डर समाप्त</string>
	<string name="please_wait">कृपया इंतज़ार करें ...</string>
	<string name="order_available_take_it_fast">ऑर्डर उपलब्द है! जल्दी स्वीकार कर ली जिए !!ं</string>
	<!-- edit_menu_action.xml -->
	<string name="action_edit">ऑर्डर क्रमांक</string>
	<string name="shipmentDetails">ऑर्डर भेजने के विवरण</string>
	<string name="shipment_sent_date">ऑर्डर भेजने की तरीक</string>
	<string name="shipment_approximate_delvery_date">ऑर्डर पहुँच की तरीक</string>
	<string name="all_order_downloaded">सभी ऑर्डर डाउनलोड हो चुके हैं !!</string>
	<string name="required">ज़रूरी है</string>
	<string name="not_valid_name">सही नाम लिखिए</string>
	<string name="numbers_only">सिर्फ नंबर टाइप कीजिये!</string>
	<string name="invalid_mobile_number">मोबाइल नंबर सही नहीं है!</string>
	<string name="invalid_username">username सही नहीं है!</string>
	<string name="password_mismatch">पासवर्ड एक जैसे नहीं हैं!</string>
	<string name="cannot_be_empty">कुछ टाइप कीजिये!</string>
	<string name="accept_alphabets_only">Alphabets Only</string>
	<string name="accept_number_only">Numbers Only</string> 
	<string name="select_sent_date">भेजने की तरीक चुनें !</string>
	<string name="select_reaching_date">पहुँच की तरीक चुनें !</string>
	<string name="order_is_closed">ऑर्डर समाप्त हो चुका है !</string>
	<string name="sub_order_not_completed">पक्का नहीं हुआ है !</string>
	<string name="sub_order_confirmed">पक्का हो गया है !</string>
	<string name="sub_order_received">प्राप्त हो चुका है !</string>
	<string name="towards">को दी जानेवाली रक्कम</string>
	
	<!-- HomeActivity.java -->	
    <string-array name="month_array">
          <item>जनवरी </item>
			 <item>फ़रवरी</item>
			 <item>मार्च </item>
			 <item>अप्रैल</item>
			 <item>मई </item>
			 <item>जून </item>
			 <item>जुलाई</item>
			 <item>अगस्त </item>
			 <item>सितंबर 	</item>
			 <item>अक्टूबर</item>
			 <item>नवंबर</item>
			 <item>दिसम्बर</item>        
    </string-array>
</resources>