<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:orientation="vertical" >

	  <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp" 
        android:orientation="horizontal"
        android:layout_marginLeft="5dip">
        
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.44"
                 android:text="@string/delivery_date"
                 android:textSize="18sp" />
             
             <TextView 
   	        
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        
   	        android:id="@+id/delivery_date_text"
   	        android:textSize="18sp"
   	        />
             
                  <TextView 
   	        android:layout_marginLeft="1dip"
            
   	        android:layout_width="1dp"
   	        android:layout_height="25dp"
   	        android:layout_gravity="right|center_vertical"
   	        android:background="@drawable/divider_line"
   	       
   	        />
             
             <Button 
                 android:id="@+id/btn_delivery_date"
                 android:background="@drawable/calendar"
                 
                 android:layout_width="32dip"
            android:layout_height="32dip"/>
            
            </LinearLayout>

	   <RelativeLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal" >

	      <TextView
	          android:id="@+id/TextView03"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignBottom="@+id/textView1"
	          android:layout_alignParentLeft="true"
	          android:layout_marginLeft="32dp"
	          android:labelFor="@+id/qty"
	          android:text="@string/suborderqty"
	          android:textAppearance="?android:attr/textAppearanceLarge" />

	      <TextView
	          android:id="@+id/textView1"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignBaseline="@+id/qty"
	          android:layout_alignBottom="@+id/qty"
	          android:layout_alignParentRight="true"
	          android:layout_marginRight="15dp"
	          android:text="@string/kilo"
	          android:textAppearance="?android:attr/textAppearanceMedium" />

	      <EditText
	          android:id="@+id/qty"
	          android:layout_width="152dp"
	          android:layout_height="wrap_content"
	          android:layout_alignParentTop="true"
	          android:layout_marginRight="14dp"
	          android:layout_toLeftOf="@+id/textView1"
	          android:ems="10"
	          android:inputType="number" />

	  </RelativeLayout>

	 <RelativeLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal" >

	      <TextView
	          android:id="@+id/priceTxt"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentLeft="true"
	          android:layout_centerVertical="true"
	          android:layout_marginLeft="35dp"
	          android:labelFor="@+id/price"
	          android:text="@string/suborderprice"
	          android:textAppearance="?android:attr/textAppearanceLarge" />

	      <EditText
	          android:id="@+id/price"
	          android:layout_width="152dp"
	          android:layout_height="wrap_content"
	          android:layout_alignParentTop="true"
	          android:layout_toLeftOf="@+id/textView2"
	          android:layout_weight="0.08"
	          android:ems="10"
	          android:inputType="number" >

	          <requestFocus />
	      </EditText>

	      <TextView
	          android:id="@+id/textView2"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignBaseline="@+id/price"
	          android:layout_alignBottom="@+id/price"
	          android:layout_alignParentRight="true"
	          android:layout_marginRight="16dp"
	          android:text="@string/rupee_per_kg"
	          android:textAppearance="?android:attr/textAppearanceMedium" />

	  </RelativeLayout>

	 <RelativeLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal" >

	      <TextView
	          android:id="@+id/travelTxt"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:labelFor="@+id/travelprice"
	          android:text="@string/subordertravel"
	          android:textAppearance="?android:attr/textAppearanceLarge" />

	      <TextView
	          android:id="@+id/TextView01"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentRight="true"
	          android:layout_centerVertical="true"
	          android:layout_marginRight="15dp"
	          android:text="@string/rupee"
	          android:textAppearance="?android:attr/textAppearanceMedium" />

	      <EditText
	          android:id="@+id/travelprice"
	          android:layout_width="152dp"
	          android:layout_height="wrap_content"
	          android:layout_alignParentTop="true"
	          android:layout_marginRight="20dp"
	          android:layout_toLeftOf="@+id/TextView01"
	          android:layout_weight="0.08"
	          android:ems="10"
	          android:inputType="number" />

	  </RelativeLayout>

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:textAlignment="center" >

		    <TextView
		        android:id="@+id/farmerTotalPriceTxt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:layout_marginLeft="18dp"
		        android:layout_weight="0.01"
		        android:labelFor="@+id/travelprice"
		        android:text="@string/farmer_total_price"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <TextView
		        android:id="@+id/TextView02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="15dp"
		        android:text="@string/rupee"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

		    <TextView
		        android:id="@+id/farmerTotalPrice"
		        android:layout_width="70dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_marginRight="14dp"
		        android:layout_toLeftOf="@+id/TextView02"
		        android:layout_weight="0.06"
		        android:labelFor="@+id/travelprice"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textColor="#99CCFF" />

		</RelativeLayout>

	  <RelativeLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:textAlignment="center" >

	      <Button
	          android:id="@+id/button2"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentRight="true"
	          android:layout_alignParentTop="true"
	          android:layout_marginRight="33dp"
	          android:enabled="false"
	          android:text="@string/delete" />

	      <Button
	          android:id="@+id/phone"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentLeft="true"
	          android:layout_alignParentTop="true"
	          android:layout_marginLeft="33dp"
	          android:enabled="false"
	          android:text="@string/call" />

	  </RelativeLayout>
	<LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:textAlignment="center" >
	  <CheckBox
	      android:id="@+id/confirmed_it"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/confirmed_it" />
	</LinearLayout>
	<LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:textAlignment="center" >
	  <CheckBox
	      android:id="@+id/received_it"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/received_it" />
	  </LinearLayout>
	 
</LinearLayout>